fixed topnav alignment for chrome

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
 
 .navItemEnd {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   flex-grow: 1;
 }
 
